# vastai-fooocus-plus

./: .mise.toml  Dockerfile  README.md  pyproject.toml  test_provision_local.sh
.github/workflows/: ci.yml  cleanup.yml  docker-publish.yml
config/fooocus/: .gitkeep
config/nginx/html/: index.html
config/nginx/sites-available/: default
config/provision/: essential.toml  models.toml
examples/: flux-provision.toml  provision-config.toml  test-provision-minimal.toml
scripts/: provision.py  start.sh
scripts/provision/: __init__.py  core.py  provision.py
scripts/services/: filebrowser.sh  fooocus.sh  logdy.sh  nginx.sh  provisioning.sh  ttyd.sh  utils.sh
src/provision/: cli.py  core.py
templates/: fooocus.html
